# log-similarity-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/log_analyzer/: __init__.py  chroma_cli.py  chroma_similarity.py  chroma_storage.py  cli.py  embedding_generator.py  similarity.py  storage.py
