[project]
name = "log-similarity-analyzer"
version = "0.1.0"
description = "Log file similarity analysis using embeddings"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "chromadb>=0.4.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
log-analyzer = "log_analyzer.cli:main"

[tool.ruff]
line-length = 119
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/log_analyzer"]